tests/baselines/reference/emptyGenericParamList.errors.txt
tests/cases/compiler/emptyGenericParamList.ts(2,8): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/emptyGenericParamList.ts(2,9): error TS1099: Type argument list cannot be empty.


==== tests/cases/compiler/emptyGenericParamList.ts (2 errors) ====
    class I<T> {}
    var x: I<>;
           ~~~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
            ~~
!!! error TS1099: Type argument list cannot be empty.